<resources>
    <string name="app_name">App_RadioButton</string>
    <string name="txt_PrimerValor">Introducir el Primer Valor</string>
    <string name="txt_SegundoValor">Introducir el Segundo Valor</string>
    <string name="rb1">Sumar</string>
    <string name="rb2">Restar</string>
    <string name="rb3">Multiplicar</string>
    <string name="rb4">Dividir</string>
    <string name="botton">CALCULAR</string>
    <string name="textView_Resultado">Resultado</string>
</resources>